--- a/custom_components/chargepoint/manifest.json
+++ b/custom_components/chargepoint/manifest.json
@@ -1,13 +1,16 @@
-{
-  "domain": "chargepoint",
-  "name": "ChargePointTest",
-  "codeowners": ["@mbillow"],
-  "config_flow": true,
-  "documentation": "https://github.com/Frazou1/chargepoint-test",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/Frazou1/chargepoint-test/issues",
-  "requirements": [
-      "python-chargepoint==1.10.0"
-    ],
-  "version": "0.11.0"
-}
+diff --git a/custom_components/chargepoint/manifest.json b/custom_components/chargepoint/manifest.json
+@@
+ {
+   "domain": "chargepoint",
+   "name": "ChargePoint",
+-  "version": "0.0.0",
++  "version": "0.1.0-local",
+   "documentation": "https://github.com/mbillow/ha-chargepoint",
+   "issue_tracker": "https://github.com/mbillow/ha-chargepoint/issues",
+   "integration_type": "hub",
+   "iot_class": "cloud_polling",
++  "config_flow": true,
+   "codeowners": ["@mbillow"],
+-  "requirements": ["python-chargepoint>=1.10.0"]
++  "requirements": ["python-chargepoint>=1.10.0", "cloudscraper>=1.2.71"]
+ }
