--- a/custom_components/chargepoint/manifest.json
+++ b/custom_components/chargepoint/manifest.json
@@ -1,16 +1,12 @@
-diff --git a/custom_components/chargepoint/manifest.json b/custom_components/chargepoint/manifest.json
-@@
- {
-   "domain": "chargepoint",
-   "name": "ChargePoint",
--  "version": "0.0.0",
-+  "version": "0.1.0-local",
-   "documentation": "https://github.com/mbillow/ha-chargepoint",
-   "issue_tracker": "https://github.com/mbillow/ha-chargepoint/issues",
-   "integration_type": "hub",
-   "iot_class": "cloud_polling",
-+  "config_flow": true,
-   "codeowners": ["@mbillow"],
--  "requirements": ["python-chargepoint>=1.10.0"]
-+  "requirements": ["python-chargepoint>=1.10.0", "cloudscraper>=1.2.71"]
- }
+{
+  "domain": "chargepoint",
+  "name": "ChargePointTest",
+  "version": "0.1.0-local",
+  "documentation": "https://github.com/Frazou1/chargepoint-test",
+  "issue_tracker": "https://github.com/Frazou1/chargepoint-test/issues",
+  "integration_type": "hub",
+  "iot_class": "cloud_polling",
+  "config_flow": true,
+  "codeowners": ["@Frazou1"],
+  "requirements": ["python-chargepoint>=1.10.0", "cloudscraper>=1.2.71"]
+}
